--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 </head>
 <body>
   <h1>Ma pub A-ADS</h1>
-  <iframe data-aa="1234567" src="https://ad.a-ads.com/2391207?size=728x90" 
+  <!-- Bloc publicitaire A-ADS -->
+  <iframe data-aa="2391207" 
+    src="https://ad.a-ads.com/2391207?size=728x90" 
     style="width:728px; height:90px; border:0px; padding:0; overflow:hidden; background-color: transparent;" 
     allowtransparency="true" scrolling="no" frameborder="0">
   </iframe>
+</body>
+</html>
